--- a/src/views/refundForm.ejs
+++ b/src/views/refundForm.ejs
@@ -40,19 +40,6 @@
                                         </div>
                                     </div>
                                     <div class="hr-line-dashed"></div>
-                                    <div class="form-group">
-                                        <div class="form-group row"><label class="col-sm-3 col-form-label">Moneda</label>
-                                            <div class="col-sm-9">
-                                                <select class="form-control" name="tipo_moneda_reembolso">
-                                                    <option selected value="0">Seleccione *</option>
-                                                        <option value="Bolivar">Bolivar</option>
-                                                        <option value="Dólar">Dólar</option>
-                                                        <option value="Euros">Euros</option>
-                                                </select>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="hr-line-dashed"></div>
                                     <div class="form-group row"><label class="col-sm-3 col-form-label">Fecha Ocurrencia</label>
                                         <div class="col-sm-9">
                                             <input 
@@ -91,6 +78,29 @@
                                         </div>
                                     </div>
                                     <div class="hr-line-dashed"></div>
+                                    <div class="form-group">
+                                        <div class="form-group row"><label class="col-sm-3 col-form-label">Moneda</label>
+                                            <div class="col-sm-9">
+                                                <select class="form-control" name="tipo_moneda_reembolso">
+                                                    <option selected value="0">Seleccione *</option>
+                                                        <option value="Bolivar">Bolivar</option>
+                                                        <option value="Dólar">Dólar</option>
+                                                        <option value="Euros">Euros</option>
+                                                </select>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="hr-line-dashed"></div>
+                                    <div class="form-group">
+                                        <div class="form-group row"><label class="col-sm-3 col-form-label">Siniestro</label>
+                                            <div class="col-sm-9">
+                                                <select class="form-control" name="siniestro_nombre" id="siniestro_nombre">
+                                                    <option selected value="0">Seleccione *</option>
+                                                </select>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="hr-line-dashed"></div>
                                     <div class="form-group row"><label class="col-sm-3 col-form-label">Observaciones</label>
                                         <div class="col-sm-9">
                                             <textarea 
@@ -116,20 +126,6 @@
                                                 name="monto_reclamo_reembolso"
                                                 id="monto_reclamo_reembolso" 
                                                 placeholder="Monto Reclamado *"
-                                                class="form-control"
-                                                required
-                                            >
-                                        </div>
-                                    </div>
-                                    <div class="hr-line-dashed"></div>
-                                    <div class="form-group row"><label class="col-sm-3 col-form-label">Monto Pagado</label>
-                                        <div class="col-sm-9">
-                                            <input 
-                                                type="number"
-                                                step="0.01"
-                                                name="monto_pagado_reembolso"
-                                                id="monto_pagado_reembolso" 
-                                                placeholder="Monto Pagado *"
                                                 class="form-control"
                                                 required
                                             >
@@ -172,19 +168,33 @@
                                             >
                                         </div>
                                     </div>
-                                    <div class="form-group row"><label class="col-sm-2 col-form-label"></label>
-                                        <div class="col-sm-10">
-                                            <input 
-                                                type="hidden"
-                                                name="asegurado_id"
-                                                id="asegurado_id"
-                                                class="form-control"
-                                            >
+                                    <div class="hr-line-dashed"></div>
+                                    <div class="form-group row"><label class="col-sm-3 col-form-label">Estatus</label>
+                                        <div class="col-sm-9">
+                                            <select class="form-control" name="estatus" id="estatus" onchange="showInput()">
+                                                <option selected value="0">Seleccione *</option>
+                                                    <option value="Pendiente">Pendiente</option>
+                                                    <option value="Rechazado">Rechazado</option>
+                                                    <option value="Liquidado">Liquidado</option>
+                                                    <option value="Pagado">Pagado</option>
+                                            </select>
                                         </div>
                                     </div>
-                                    </br>
-                                    </br>
-                                    </br>
+                                    <div class="form-group" id="searchinput" style="display:none">
+                                        <div class="hr-line-dashed"></div>
+                                        <div class="form-group row"><label class="col-sm-3 col-form-label">Monto Pagado</label>
+                                            <div class="col-sm-9">
+                                                <input 
+                                                    type="number"
+                                                    step="0.01"
+                                                    name="monto_pagado"
+                                                    id="monto_pagado" 
+                                                    placeholder="Monto Pagado"
+                                                    class="form-control"
+                                                >
+                                            </div>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
