--- a/src/views/lettersGuarentee.ejs
+++ b/src/views/lettersGuarentee.ejs
@@ -40,6 +40,7 @@
                             <th>Monto Pagado</th>
                             <th>Observaciones</th>
                             <th>Tipo Moneda</th>
+                            <th>Estatus</th>
                             <th>Editar</th>
                             <th>Deshabilitar</th>
                         </tr>
@@ -57,6 +58,7 @@
                             <th>Monto Pagado</th>
                             <th>Observaciones</th>
                             <th>Tipo Moneda</th>
+                            <th>Estatus</th>
                             <th>Editar</th>
                             <th>Deshabilitar</th>
                         </tr>
@@ -140,9 +142,10 @@ $(document).ready(function(){
             {"data": "fecha_ocurrencia_carta_aval"},
             {"data": "fecha_notificacion_carta_aval"},
             {"data": "monto_reclamado_carta_aval"},
-            {"data": "monto_pagado_carta_aval"},
+            {"data": "monto_pagado"},
             {"data": "observacion_carta_aval"},
             {"data": "tipo_moneda_carta_aval"},
+            {"data": "estatus"},
             {
                 "data": "",
                 "render": (data, type, row) => {
